2007-01-02  Dave Nomura <dcnltc@us.ibm.com>

	* events/Makefile.am:
	* events/ppc64/power6/event_mappings:
	* events/ppc64/power6/events:
	* events/ppc64/power6/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c:  Add support for Power6

2006-12-14  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:
	* events/Makefile.am:
	* events/ppc64/cell-be/events:
	* events/ppc64/cell-be/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c Add support for Cell Broadband Engine

2006-12-14  Dave Nomura <dcnltc@us.ibm.com>

	* daemon/init.c: move open_opd_files call to initialization phase

2006-12-11  Maynard Johnson <maynardj@us.ibm.com>

	* m4/kerneloption.m4:
	* m4/kernelversion.m4: eliminate/replace usage of obsolete kernel
	  header linux/config.h


2006-12-06  Daniel Jacobowitz  <dan@debian.org>

	* libopt++/popt_options.cpp: complete fix for static
	  initialisation ordering bug on ARM

2006-11-24  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in: warn about braces parsing in differential
	  mode.

	* doc/opreport.1.in:
	* doc/oparchive.1.in:
	* doc/opannotate.1.in:
	* doc/opgprof.1.in: point explicitly to oprofile(1)

	* pp/opreport_options.cpp: --xml is incompatible with
	  differential profiles.

2006-11-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: reapply 2006-8-03  Jeremiah Lott patch
	  which was accidentally reverted, as a sideeffect this patch change
	  counter allocation order. It can't hurt since our storage don't
	  take care about counter number.
	* libop/tests/alloc_counter_tests.c: add a test case for this patch.
	  Take care about counter allocation order change.

2006-11-19  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:  Document platforms where callgraph is supported

2006-11-17  Dave Nomura  <dcnltc@us.ibm.com>

	* doc/Makefile.am: